vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_spawn_wait.vv
struct Box {
	path string
}

fn load(path string) Box {
	return Box{
		path: path
	}
}

fn main() {
	(spawn load($embed_file(@FILE).path)).wait().path
}
